fixed z-index

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -83,7 +83,7 @@ header {
 
 header::before {
   position: absolute;
-  z-index: -1;
+  z-index: 1;
   width: 100%;
   height: 100%;
   content: "";
@@ -92,7 +92,7 @@ header::before {
 }
 
 .title {
-  z-index: 2;
+  z-index: 3;
   flex-shrink: 0;
 }
 
@@ -100,6 +100,7 @@ header img {
   position: relative;
   bottom: 50px;
   right: 275px;
+  z-index: 2;
 }
 
 .description {
